--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,3 +7,8 @@ data_ingestion:
   local_data_file: /Users/amoghagadde/Desktop/Amogha/Projects/Data_Science/Text-Summarizer/artifacts/data_ingestion/data.zip
   unzip_dir: /Users/amoghagadde/Desktop/Amogha/Projects/Data_Science/Text-Summarizer/artifacts/data_ingestion
 
+
+data_validation: 
+  root_dir: /Users/amoghagadde/Desktop/Amogha/Projects/Data_Science/Text-Summarizer/artifacts/data_validation
+  STATUS_FILE: /Users/amoghagadde/Desktop/Amogha/Projects/Data_Science/Text-Summarizer/artifacts/data_validation/status.txt
+  ALL_REQUIRED_FILES: ['train', 'test', 'validation']
