--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 Miniconda3-latest-MacOSX-arm64.sh filter=lfs diff=lfs merge=lfs -text
+artifacts/model_trainer/checkpoint-31/model.safetensors filter=lfs diff=lfs merge=lfs -text
+artifacts/model_trainer/checkpoint-31/optimizer.pt filter=lfs diff=lfs merge=lfs -text
